--- a/client/src/css/Post.css
+++ b/client/src/css/Post.css
@@ -6,7 +6,7 @@ div.post {
   border: 1px solid #eee;
   box-shadow: 0 1px 1px #ccc;
   /* width: 400px; */
-  padding: 10px;
+  padding: 5px 5px 18px 18px; /* top right bottom left */
   margin: 10px;
   /* display: flex; */
 }
